--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "next": "15.0.4",
+    "shared": "*"
   },
   "devDependencies": {
     "typescript": "^5",
