--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,8 +14,12 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5"
+  },
+  "dependencies": {
+    "uuid": "^11.0.3"
   }
 }
